--- a/DockerFile
+++ b/DockerFile
@@ -2,6 +2,6 @@ FROM openjdk:11-jdk-slim
 
 WORKDIR /app
 
-COPY build/libs/*.jar app.jar
+COPY build/libs/DemoPurpose_CICD.1.0.0.jar DemoPurpose_CICD.1.0.0.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "DemoPurpose_CICD.1.0.0.jar"]
